# cookiie_brain

./: .gitignore  ARCHITECTURE.md  CODE_REVIEW_FIXES.md  CONCEPT_ROTATION_ORBIT.md  CURRENT_SYSTEM_ANALYSIS.md  ENGINE_HUB  FEEDBACK_RESPONSE.md  FIXES_APPLIED.md  HANDOVER_COMPLETE.md  LAYERS.md  Phase_A_CONCEPT.md  QUICK_START.md  README.md  RESULT_ANALYSIS.md  brain_analyzer.py  cookiie_brain_engine.py  hippo_memory_engine.py  pham_chain_README.json  pham_chain_WORK_LOG_2026-02-26.json  pham_chain___init__.json  pham_chain__constants.json  pham_chain_column.json  pham_chain_cookiie_brain_engine.json  pham_chain_gaia_attractor_sim.json  pham_chain_latitude_bands_sim.json  pham_chain_let_there_be_light_demo.json  pham_chain_ocean_simulator.json  pham_chain_plant_lifecycle_sim.json  pham_chain_solar_luminosity.json  pham_chain_solar_wind.json  pham_chain_tidal.json  pham_chain_tidal_integration_verification.json  pham_chain_water_cycle.json
ENGINE_HUB/00_PLANET_LAYER/Lucifer_Engine/: README.md  SIGNATURE.md  pyproject.toml
ENGINE_HUB/00_PLANET_LAYER/Lucifer_Engine/lucifer_engine/: __init__.py  __main__.py  impact_estimator.py
L0_solar/: LAYER_FLOW.md  README.md  __init__.py  narrative_runner.py  pipeline.py  verify_imports.py
L1_dynamics/: README.md
L3_memory/: README.md  __init__.py  energy_budgeter.py  hippo_memory_engine.py  memory_store.py
L4_analysis/: README.md  __init__.py  brain_analyzer.py  ocean_simulator.py
Layer_1/: README.md  README_EN.md  __init__.py  statistical_mechanics.py
Layer_2/: README.md  README_EN.md  __init__.py  nbody.py
Layer_3/: README.md  __init__.py  gauge.py
Layer_4/: README.md  __init__.py  fluctuation_theorems.py
standalone_build/UnderWorld/: .gitignore  README.md  pyproject.toml
standalone_build/UnderWorld/underworld/: __init__.py  consciousness.py  deep_monitor.py  hades.py  rules.py
(+709 files in other folders)
