[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "underworld-engine"
version = "1.0.0"
description = "UnderWorld — 거시 감시·의식 경고 독립 엔진. Hades ONLY measures, NEVER acts."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Qquarts co.", url = "https://github.com/qquartsco-svg" }]
keywords = ["hades", "underworld", "consciousness", "telemetry", "watchdog"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["underworld*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["underworld*"]
