[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lucifer-engine"
version = "0.1.0"
description = "Comet/asteroid impact estimator — standalone exploration engine (no CookiieBrain dependency)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "CookiieBrain" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = []

[project.scripts]

[tool.setuptools.packages.find]
where = ["."]
include = ["lucifer_engine*"]
